--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/fc3e9057b4.js" crossorigin="anonymous"></script>
     <title>Document</title>
   </head>
     <body>
+
       <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -81,6 +83,94 @@
 
         </div>
       </div>
+    </div>
     <!-- // immagini centrali -->
+
+
+    <div class="container-fluid bg_lightblue">
+      <div class="container">
+        <div class="row txt_center">
+          <div class="col-md-12">
+            <h2>ABOUT</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum similique a quam pariatur tempora, blanditiis quaerat illo, amet veritatis vel.</p>
+          </div>
+          <div class="col-md-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime deleniti debitis cupiditate assumenda. Magni maiores nulla, quae consequatur ullam illum!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row txt_center">
+        <div class="col-md-12">
+          <h2>CONTACT ME</h2>
+        </div>
+      </div>
+      <div class="row">
+        <form>
+          <div class="form-group">
+            <label for="formGroupExampleInput">Name</label>
+            <input type="text" class="form-control" id="formGroupExampleInput">
+          </div>
+          <div class="form-group">
+            <label for="formGroupExampleInput2">Email Address</label>
+            <input type="text" class="form-control" id="formGroupExampleInput2">
+          </div>
+          <div class="form-group">
+            <label for="formGroupExampleInput2">Phone number</label>
+            <input type="text" class="form-control" id="formGroupExampleInput2">
+          </div>
+        </form>
+        <form class="was-validated">
+          <div class="mb-3">
+            <label for="validationTextarea">Message</label>
+            <textarea class="form-control is-invalid" id="validationTextarea" required></textarea>
+            <div class="invalid-feedback">
+            </div>
+            <input class="btn btn-primary" type="submit" value="Send">
+          </div>
+      </div>
+    </div>
+
+    <footer class="container-fluid bg_lightblue">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h2>LOCATION</h2>
+            <p>2215 John Daniel Drive Clark, MO</p>
+            <p>54243</p>
+          </div>
+          <div class="col-md-4">
+            <h2>AROUND THE WEB</h2>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-google-plus-g"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-linkedin-in"></i>
+          </div>
+          <div class="col-md-4">
+            <h2>ABOUT FREELANCER</h2>
+            <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div class="container-fluid bg_darkblue">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 txt_center">
+            <h4>Copyright &copy; Your Website 2019</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     </body>
+
+
 </html>
