--- a/index.html
+++ b/index.html
@@ -10,102 +10,149 @@
     <title>Document</title>
   </head>
     <body>
-
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+      <!-- NAVBAR -->
+      <nav class="navbar navbar-inverse navbar-fixed-top bg_lightblue">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+          </div>
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav fl_right">
+              <li class="active"><a href="#">PORTFOLIO</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav fl_right">
-            <li class="active"><a href="#">PORTFOLIO</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+      </nav>
 
-      <div class="jumbotron txt_center">
+    <!-- // NAVBAR -->
+    <!-- HEADER -->
+    <div class="jumbotron jumbotron_ht txt_center bg_lightgreen">
       <div class="container">
+        <img src="img/avatar.svg" alt="">
         <h1>START BOOTSTRAP</h1>
+        <div class="line_star txt_center">
+          <div class="divder_line_top "></div>
+          <div class="divider_center ">
+            <span class="star"><img src="img/star.svg" alt=""></span>
+          </div>
+          <div class="divder_line_top "></div>
+        </div>
         <p>GRAPHIC DESIGN - WEB DEVELOPER - ILLUSTRATOR</p>
       </div>
     </div>
+    <!-- // HEADER -->
 
-    <div class="container">
-      <!-- Example row of columns -->
+    <div class="container portfolio">
       <div class="row">
-        <div class="col-md-12 txt_center">
+        <div class="col-xs-12 col-md-12 col-lg-12 txt_center">
           <h2>PORTFOLIO</h2>
         </div>
-      </div>
-
-    <!-- immagini centrali -->
-      <div class="row">
-        <div class="col-md-4 bg_lightblue">
-
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-        </div>
-        <div class="col-md-4 bg_lightblue">
-
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-       </div>
-        <div class="col-md-4 bg_lightblue">
-
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-
+        <div class="line_star txt_center">
+          <div class="divder_line "></div>
+          <div class="divider_center ">
+            <span class="star"><img src="img/star_blue.svg" alt=""></span>
+          </div>
+          <div class="divder_line "></div>
         </div>
       </div>
+      <!-- immagini centrali -->
+
 
       <div class="row">
-        <div class="col-md-4 bg_lightgreen mg_custom">
 
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
+            <div class="items">
+              <div class="overlay">
+                <div class="plus_item">
+                  <img src="img/plus.svg"  alt="">
+                </div>
+              </div>
+              <img src="img/cabin.png" class="cabin">
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
+              <div class="items">
+                <div class="overlay">
+                  <div class="plus_item">
+                    <img src="img/plus.svg"  alt="">
+                  </div>
+                </div>
+                <img src="img/cake.png" class="cabin">
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
+                <div class="items">
+                  <div class="overlay">
+                    <div class="plus_item">
+                      <img src="img/plus.svg"  alt="">
+                    </div>
+                  </div>
+                  <img src="img/circus.png" class="cabin">
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
+                  <div class="items">
+                    <div class="overlay">
+                      <div class="plus_item">
+                        <img src="img/plus.svg"  alt="">
+                      </div>
+                    </div>
+                    <img src="img/game.png" class="cabin">
+                  </div>
+                </div>
+                <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
+                    <div class="items">
+                      <div class="overlay">
+                        <div class="plus_item">
+                          <img src="img/plus.svg"  alt="">
+                        </div>
+                      </div>
+                      <img src="img/safe.png" class="cabin">
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
+                      <div class="items">
+                        <div class="overlay">
+                          <div class="plus_item">
+                            <img src="img/plus.svg"  alt="">
+                          </div>
+                        </div>
+                        <img src="img/submarine.png" class="cabin">
+                      </div>
+                    </div>
 
-        </div>
-        <div class="col-md-4 bg_lightgreen mg_custom mg_x">
 
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-
-       </div>
-        <div class="col-md-4 bg_lightgreen mg_custom">
-
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-
-        </div>
       </div>
     </div>
     <!-- // immagini centrali -->
 
-
-    <div class="container-fluid bg_lightblue">
-      <div class="container">
+    <div class="container-fluid bg_lightgreen about">
+      <div class="container ">
         <div class="row txt_center">
-          <div class="col-md-12">
+          <div class="col-xs-12 col-md-12">
             <h2>ABOUT</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum similique a quam pariatur tempora, blanditiis quaerat illo, amet veritatis vel.</p>
+          <div class="col-xs-12 col-md-6 col-offset-">
+            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
           </div>
-          <div class="col-md-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime deleniti debitis cupiditate assumenda. Magni maiores nulla, quae consequatur ullam illum!</p>
+          <div class="col-xs-12 col-md-6">
+            <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container">
+    <div class="container contact_me">
       <div class="row txt_center">
         <div class="col-md-12">
           <h2>CONTACT ME</h2>
@@ -137,29 +184,31 @@
       </div>
     </div>
 
-    <footer class="container-fluid bg_lightblue">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
+    <footer class="container-fluid bg_lightblue txt_white">
+      <div class="container content_footer">
+        <div class="row txt_align">
+          <div class="col-md-4 txt_center">
             <h2>LOCATION</h2>
             <p>2215 John Daniel Drive Clark, MO</p>
             <p>54243</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 txt_center">
             <h2>AROUND THE WEB</h2>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-google-plus-g"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-linkedin-in"></i>
+            <div class="icons txt_center px_10">
+              <i class="fab fa-facebook-f border_round"></i>
+              <i class="fab fa-google-plus-g border_round"></i>
+              <i class="fab fa-twitter border_round"></i>
+              <i class="fab fa-linkedin-in border_round"></i>
+            </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 txt_center">
             <h2>ABOUT FREELANCER</h2>
             <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
           </div>
         </div>
       </div>
     </footer>
-    <div class="container-fluid bg_darkblue">
+    <div class="container-fluid bg_darkblue txt_white">
       <div class="container">
         <div class="row">
           <div class="col-md-12 txt_center">
