--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
     <body>
       <!-- NAVBAR -->
-      <nav class="navbar navbar-inverse navbar-fixed-top bg_lightblue">
+      <nav class=" col-sm-12 navbar navbar-inverse navbar-fixed-top bg_lightblue txt_white">
         <div class="container">
-          <div class="navbar-header">
+          <div class="navbar-header txt_white">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -24,7 +24,7 @@
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav fl_right">
-              <li class="active"><a href="#">PORTFOLIO</a></li>
+              <li><a href="#">PORTFOLIO</a></li>
               <li><a href="#">ABOUT</a></li>
               <li><a href="#">CONTACT</a></li>
             </ul>
@@ -34,16 +34,16 @@
 
     <!-- // NAVBAR -->
     <!-- HEADER -->
-    <div class="jumbotron jumbotron_ht txt_center bg_lightgreen">
+    <div class="col-sm-12 jumbotron jumbotron_ht txt_center bg_lightgreen">
       <div class="container">
         <img src="img/avatar.svg" alt="">
         <h1>START BOOTSTRAP</h1>
-        <div class="line_star txt_center">
+        <div class="line_star_top txt_center">
           <div class="divder_line_top "></div>
           <div class="divider_center ">
             <span class="star"><img src="img/star.svg" alt=""></span>
           </div>
-          <div class="divder_line_top "></div>
+          <div class="divder_line_top"></div>
         </div>
         <p>GRAPHIC DESIGN - WEB DEVELOPER - ILLUSTRATOR</p>
       </div>
@@ -52,10 +52,10 @@
 
     <div class="container portfolio">
       <div class="row">
-        <div class="col-xs-12 col-md-12 col-lg-12 txt_center">
+        <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 txt_center">
           <h2>PORTFOLIO</h2>
         </div>
-        <div class="line_star txt_center">
+        <div class="line_star_middle txt_center">
           <div class="divder_line "></div>
           <div class="divider_center ">
             <span class="star"><img src="img/star_blue.svg" alt=""></span>
@@ -68,66 +68,71 @@
 
       <div class="row">
 
-        <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 py_40 ">
+          <div class="items">
+            <div class="overlay">
+              <div class="plus_item">
+                <img src="img/plus.svg"  alt="">
+              </div>
+            </div>
+              <img src="img/cabin.png" class="cabin">
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-6  col-lg-4 py_40 ">
+          <div class="items">
+            <div class="overlay">
+              <div class="plus_item">
+                <img src="img/plus.svg"  alt="">
+              </div>
+            </div>
+              <img src="img/cake.png" class="cabin">
+          </div>
+
+            </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4  py_40 ">
             <div class="items">
               <div class="overlay">
                 <div class="plus_item">
                   <img src="img/plus.svg"  alt="">
                 </div>
               </div>
-              <img src="img/cabin.png" class="cabin">
+                <img src="img/circus.png" class="cabin">
             </div>
           </div>
-          <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
+
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 py_40 ">
+            <div class="items">
+              <div class="overlay">
+                <div class="plus_item">
+                  <img src="img/plus.svg"  alt="">
+                </div>
+              </div>
+                <img src="img/game.png" class="cabin">
+            </div>
+          </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 py_40 ">
               <div class="items">
                 <div class="overlay">
                   <div class="plus_item">
                     <img src="img/plus.svg"  alt="">
                   </div>
                 </div>
-                <img src="img/cake.png" class="cabin">
+                <img src="img/safe.png" class="cabin">
               </div>
             </div>
-            <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
-                <div class="items">
-                  <div class="overlay">
-                    <div class="plus_item">
-                      <img src="img/plus.svg"  alt="">
-                    </div>
+
+              <div class="col-xs-12 col-sm-6 col-md-6  col-lg-4 py_40 ">
+              <div class="items">
+                <div class="overlay">
+                  <div class="plus_item">
+                    <img src="img/plus.svg"  alt="">
                   </div>
-                  <img src="img/circus.png" class="cabin">
                 </div>
+                  <img src="img/submarine.png" class="cabin">
               </div>
-              <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
-                  <div class="items">
-                    <div class="overlay">
-                      <div class="plus_item">
-                        <img src="img/plus.svg"  alt="">
-                      </div>
-                    </div>
-                    <img src="img/game.png" class="cabin">
-                  </div>
-                </div>
-                <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
-                    <div class="items">
-                      <div class="overlay">
-                        <div class="plus_item">
-                          <img src="img/plus.svg"  alt="">
-                        </div>
-                      </div>
-                      <img src="img/safe.png" class="cabin">
-                    </div>
-                  </div>
-                  <div class="col-xs-12 col-md-12 col-lg-4  py_40 ">
-                      <div class="items">
-                        <div class="overlay">
-                          <div class="plus_item">
-                            <img src="img/plus.svg"  alt="">
-                          </div>
-                        </div>
-                        <img src="img/submarine.png" class="cabin">
-                      </div>
-                    </div>
+            </div>
 
 
       </div>
@@ -136,26 +141,48 @@
 
     <div class="container-fluid bg_lightgreen about">
       <div class="container ">
-        <div class="row txt_center">
-          <div class="col-xs-12 col-md-12">
+        <div class="row txt_center txt_size about_color">
+
+          <div class="col-sm-12 col-md-12">
             <h2>ABOUT</h2>
+            <div class="line_star txt_center my_50px">
+              <div class="divder_line_bottom"></div>
+              <div class="divider_center ">
+                <span class="star"><img src="img/star.svg" alt=""></span>
+              </div>
+              <div class="divder_line_bottom "></div>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-md-6 col-offset-">
-            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <p class="mlx_80px">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
           </div>
-          <div class="col-xs-12 col-md-6">
-            <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <p class="mdx_80px">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
           </div>
+
+          <div class="col-sm-12 col-md-12 button_holder">
+            <a href="#" class="button_download">
+              <i class="fas fa-download"></i> Download
+            </a>
+          </div>
+
         </div>
       </div>
     </div>
 
     <div class="container contact_me">
-      <div class="row txt_center">
+      <div class="row txt_center txt_color">
         <div class="col-md-12">
           <h2>CONTACT ME</h2>
+        </div>
+        <div class="line_star_middle txt_center">
+          <div class="divder_line "></div>
+          <div class="divider_center ">
+            <span class="star"><img src="img/star_blue.svg" alt=""></span>
+          </div>
+          <div class="divder_line "></div>
         </div>
       </div>
       <div class="row">
@@ -184,15 +211,15 @@
       </div>
     </div>
 
-    <footer class="container-fluid bg_lightblue txt_white">
+    <footer class="container-fluid bg_lightblue txt_white txt_align">
       <div class="container content_footer">
         <div class="row txt_align">
-          <div class="col-md-4 txt_center">
+          <div class="col-sm-12 col-md-4 col-lg-4 txt_center">
             <h2>LOCATION</h2>
             <p>2215 John Daniel Drive Clark, MO</p>
             <p>54243</p>
           </div>
-          <div class="col-md-4 txt_center">
+          <div class="col-sm-12 col-md-4 col-lg-4 txt_center">
             <h2>AROUND THE WEB</h2>
             <div class="icons txt_center px_10">
               <i class="fab fa-facebook-f border_round"></i>
@@ -201,17 +228,18 @@
               <i class="fab fa-linkedin-in border_round"></i>
             </div>
           </div>
-          <div class="col-md-4 txt_center">
+          <div class="col-sm-12 col-md-4 col-lg-4 txt_center">
             <h2>ABOUT FREELANCER</h2>
             <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
           </div>
         </div>
       </div>
     </footer>
+
     <div class="container-fluid bg_darkblue txt_white">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 txt_center">
+          <div class="col-sm-12 col-md-12 txt_center">
             <h4>Copyright &copy; Your Website 2019</h4>
           </div>
         </div>
