--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/fc3e9057b4.js" crossorigin="anonymous"></script>
     <title>Document</title>
   </head>
+
     <body>
       <!-- NAVBAR -->
       <nav class=" col-sm-12 navbar navbar-inverse navbar-fixed-top bg_lightblue txt_white">
@@ -31,9 +32,9 @@
           </div><!--/.nav-collapse -->
         </div>
       </nav>
+      <!-- // NAVBAR -->
 
-    <!-- // NAVBAR -->
-    <!-- HEADER -->
+      <!-- HEADER -->
     <div class="col-sm-12 jumbotron jumbotron_ht txt_center bg_lightgreen">
       <div class="container">
         <img src="img/avatar.svg" alt="">
@@ -48,11 +49,12 @@
         <p>GRAPHIC DESIGN - WEB DEVELOPER - ILLUSTRATOR</p>
       </div>
     </div>
-    <!-- // HEADER -->
+      <!-- // HEADER -->
 
+      <!-- PORTFOLIO -->
     <div class="container portfolio">
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 txt_center">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 txt_center">
           <h2>PORTFOLIO</h2>
         </div>
         <div class="line_star_middle txt_center">
@@ -63,9 +65,9 @@
           <div class="divder_line "></div>
         </div>
       </div>
-      <!-- immagini centrali -->
+      <!-- //PORTFOLIO -->
 
-
+      <!-- PORTFOLIO IMMAGINI -->
       <div class="row">
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 py_40 ">
@@ -133,12 +135,13 @@
                   <img src="img/submarine.png" class="cabin">
               </div>
             </div>
-
+        <!-- PORTFOLIO IMMAGINI -->
 
       </div>
     </div>
-    <!-- // immagini centrali -->
+      <!--// PORTFOLIO IMMAGINI -->
 
+      <!-- ABOUT -->
     <div class="container-fluid bg_lightgreen about">
       <div class="container ">
         <div class="row txt_center txt_size about_color">
@@ -171,7 +174,9 @@
         </div>
       </div>
     </div>
+      <!--// ABOUT -->
 
+      <!-- CONTACT ME -->
     <div class="container contact_me">
       <div class="row txt_center txt_color">
         <div class="col-md-12">
@@ -210,7 +215,9 @@
           </div>
       </div>
     </div>
+      <!--// CONTACT ME -->
 
+      <!-- FOOTER -->
     <footer class="container-fluid bg_lightblue txt_white txt_align">
       <div class="container content_footer">
         <div class="row txt_align">
@@ -235,7 +242,6 @@
         </div>
       </div>
     </footer>
-
     <div class="container-fluid bg_darkblue txt_white">
       <div class="container">
         <div class="row">
@@ -245,8 +251,7 @@
         </div>
       </div>
     </div>
-
-
+      <!--// FOOTER -->
     </body>
 
 
